# mcp-mixsearch

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  pyproject.toml  server.py
.continue/mcpServers/: new-mcp-server-1.yaml  new-mcp-server.yaml
.github/workflows/: docker-publish.yml
docker/: README.md
docker/mcp/: docker-compose.yml
docker/prod/: docker-compose.yml
docker/rest/: docker-compose.yml
features/web_search/: __init__.py  instructions.md  instructions_single_page.md  instructions_summaries.md  models.py  routes.py  service.py  tool.py
